optimiz IP description
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.show/9.show-parts.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.show/9.show-parts.md
@@ -40,6 +40,6 @@ The descriptions are as follows.
 | Parameter      | Description                                          |
 | -              | -                                                    |
 | `Partition ID` | The ID of the partition.                             |
-| `Leader`       | The IP address and the port of the leader.           |
-| `Peers`        | The IP addresses and the ports of all the replicas.  |
-| `Losts`        | The IP addresses and the ports of replicas at fault. |
+| `Leader`       | The IP (or hostname) and the port of the leader.           |
+| `Peers`        | The IPs (or hostnames) and the ports of all the replicas.  |
+| `Losts`        | The IPs (or hostnames) and the ports of replicas at fault. |
