--- a/docs-2.0-en/4.deployment-and-installation/6.deploy-text-based-index/3.deploy-listener.md
+++ b/docs-2.0-en/4.deployment-and-installation/6.deploy-text-based-index/3.deploy-listener.md
@@ -34,8 +34,8 @@ Most configurations are the same as the configurations of [Storage Service](../.
 | :-----------              | :-----------------------            | :------------------                                                                          |
 | `daemonize`               | `true`                              | When set to `true`, the process is a daemon process.                                         |
 | `pid_file`                | `pids/nebula-metad-listener.pid` | The file that records the process ID.                                                        |
-| `meta_server_addrs`       | -                                   | IP addresses and ports of all Meta services. Multiple Meta services are separated by commas. |
-| `local_ip`                | -                                   | The local IP address of the Listener service. Use real IP addresses instead of domain names or loopback IP addresses such as `127.0.0.1`.                                                |
+| `meta_server_addrs`       | -                                   | IP (or hostname) and ports of all Meta services. Multiple Meta services are separated by commas. |
+| `local_ip`                | -                                   | The local IP (or hostname) of the Listener service. Use real IP addresses instead of domain names or loopback IP addresses such as `127.0.0.1`.                                                |
 | `port`                    | -                                   | The listening port of the RPC daemon of the Listener service.                                |
 | `heartbeat_interval_secs` | `10`                                | The heartbeat interval of the Meta service. The unit is second (s).                          |
 | `listener_path`           | `data/listener`                     | The WAL directory of the Listener. Only one directory is allowed.                            |
