--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -59,7 +59,7 @@ curl -s 127.0.0.1:19559/flags
 
 !!! note
 
-    In an actual environment, use the real host IP address instead of `127.0.0.1` in the above example.
+    In an actual environment, use the real IP (or hostname) instead of `127.0.0.1` in the above example.
 
 ## Configuration files
 
@@ -71,7 +71,7 @@ The configuration values in the initial configuration file are for reference onl
 
 !!! note
 
-    To ensure the availability of services, it is recommended that configurations for the same service be consistent, except for the local IP address `local_ip`. For example, three Storage servers are deployed in one NebulaGraph cluster. The configurations of the three Storage servers are recommended to be consistent, except for the IP address.
+    To ensure the availability of services, it is recommended that configurations for the same service be consistent, except for `local_ip`. For example, three Storage servers are deployed in one NebulaGraph cluster. The configurations of the three Storage servers are recommended to be consistent, except for `local_ip`.
 
 The initial configuration files corresponding to each service are as follows.
 
