--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -62,8 +62,8 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                       | Predefined value | Description          |Whether supports runtime dynamic modifications|
 | -----------------------    | ---------------- | ---------------------------------------------------- |------------------|
-| `meta_server_addrs`        | `127.0.0.1:9559` | Specifies the IP addresses and ports of all Meta Services.  Multiple addresses are separated with commas.|  No|
-|`local_ip`                  | `127.0.0.1`      | Specifies the local IP for the Graph Service. The local IP address is used to identify the nebula-graphd process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
+| `meta_server_addrs`        | `127.0.0.1:9559` | Specifies the IPs (or hostnames) and ports of all Meta Services.  Multiple addresses are separated with commas.|  No|
+|`local_ip`                  | `127.0.0.1`      | Specifies the local IP (or hostname) for the Graph Service. The local IP address is used to identify the nebula-graphd process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
 |`listen_netdev`             |`any`             | Specifies the listening network device. |  No|
 | `port`                     | `9669`           | Specifies RPC daemon listening port of the Graph service. |  No|
 |`reuse_port`                |`false`           | When set to `false`, the `SO_REUSEPORT` is closed. |  No|
@@ -83,7 +83,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 !!! caution
 
-    The real IP address must be used in the configuration file. Otherwise, `127.0.0.1/0.0.0.0` cannot be parsed correctly in some cases.
+    It is recommended to use a real IP when using IP address. Otherwise, `127.0.0.1/0.0.0.0` cannot be parsed correctly in some cases.
 
 ## Charset and collate configurations
 
