--- a/docs-2.0-en/6.monitor-and-metrics/1.query-performance-metrics.md
+++ b/docs-2.0-en/6.monitor-and-metrics/1.query-performance-metrics.md
@@ -18,12 +18,12 @@ Each metric of NebulaGraph consists of three fields: name, type, and time range.
 ### Syntax
 
 ```bash
-curl -G "http://<ip>:<port>/stats?stats=<metric_name_list> [&format=json]"
+curl -G "http://<host>:<port>/stats?stats=<metric_name_list> [&format=json]"
 ```
 
 |Parameter|Description|
 |-|-|
-|`ip`|The IP address of the server. You can find it in the configuration file in the installation directory.|
+|`host`|The IP (or hostname) of the server. You can find it in the configuration file in the installation directory.|
 |`port`|The HTTP port of the server. You can find it in the configuration file in the installation directory. The default ports are 19559 (Meta), 19669 (Graph), and 19779 (Storage).|
 |`metric_name_list`|The metrics names. Multiple metrics are separated by commas (,).|
 |`&format=json`|Optional. Returns the result in the JSON format.|
