--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.show/9.show-parts.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.show/9.show-parts.md
@@ -39,7 +39,7 @@ nebula> SHOW PARTS 1;
 
 | 参数 | 说明 |
 | - | - |
-| `Partition ID` | 存储分片的 ID |
-| `Leader` | 分片对应的 Raft leader 副本的信息，包括 IP 地址与服务端口 |
-| `Peers` | 分片对应的所有副本（leader 与 follower）的信息，包括 IP 地址与服务端口 |
-| `Losts` | 分片对应的处于离线状态的副本信息，包括 IP 地址和服务端口 |
+| `Partition ID` | 存储分片的 ID。 |
+| `Leader` | 分片对应的 Raft leader 副本的信息，包括 IP（或主机名）与服务端口。 |
+| `Peers` | 分片对应的所有副本（leader 与 follower）的信息，包括 IP（或主机名）与服务端口。 |
+| `Losts` | 分片对应的处于离线状态的副本信息，包括 IP（或主机名）和服务端口。 |
