--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -66,7 +66,7 @@ curl -s 127.0.0.1:19559/flags
 ```
 
 !!! note
-    实际环境中需使用真实的主机 IP 地址取代以上示例中的`127.0.0.1`。
+    实际环境中需使用真实的 IP（或主机名）取代以上示例中的`127.0.0.1`。
 
 ## 配置文件简介
 
@@ -78,7 +78,7 @@ curl -s 127.0.0.1:19559/flags
 
 !!! note
 
-    为确保服务的可用性，同类服务的配置建议保持一致，本机 IP 地址`local_ip`除外。例如，一个 {{nebula.name}} 集群中部署了 3 个 Storage 服务器，3 者除 IP 地址外的其它配置建议都相同。
+    为确保服务的可用性，同类服务的配置建议保持一致，本机`local_ip`除外。例如，一个 {{nebula.name}} 集群中部署了 3 个 Storage 服务器，3 者除`local_ip`外的其它配置建议都相同。
 
 下表列出了各服务对应的初始配置文件。
 
