--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -54,8 +54,8 @@ Meta 服务提供了两份初始配置文件`nebula-metad.conf.default`和`nebul
 
 | 名称                      | 预设值           | 说明          |是否支持运行时动态修改|
 | :----------------------- | :---------------- | :---------------------------- |:------------------|
-| `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP 地址和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
-|`local_ip`               | `127.0.0.1`      | Meta 服务的本地 IP 地址。本地 IP 地址用于识别 nebula-metad 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
+| `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP（或主机名）和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
+|`local_ip`               | `127.0.0.1`      | Meta 服务的本地 IP（或主机名）。本地 IP 用于识别 nebula-metad 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
 | `port`                  | `9559`           | Meta 服务的 RPC 守护进程监听端口。同时还会使用相邻的`+1`（`9560`）端口用于 Meta 服务之间的 Raft 通信。 |不支持|
 | `ws_ip`                   | `0.0.0.0`      | HTTP 服务的 IP 地址。                                   |不支持|
 | `ws_http_port`            | `19559`        | HTTP 服务的端口。                                     |不支持|
@@ -64,7 +64,7 @@ Meta 服务提供了两份初始配置文件`nebula-metad.conf.default`和`nebul
 
 !!! caution
 
-    必须在配置文件中使用真实的 IP 地址。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
+    使用 IP 时建议使用真实的 IP。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
 
 ## storage 配置
 
