--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -61,8 +61,8 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
 
 | 名称                      | 预设值           | 说明          |是否支持运行时动态修改|
 | -----------------------    | ---------------- | ---------------------------------------------------- |---------------------|
-| `meta_server_addrs`        | `127.0.0.1:9559` | 全部 Meta 服务的 IP 地址和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
-|`local_ip`                  | `127.0.0.1`      | Graph 服务的本地 IP 地址。本地 IP 地址用于识别 nebula-graphd 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
+| `meta_server_addrs`        | `127.0.0.1:9559` | 全部 Meta 服务的 IP（或主机名）和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
+|`local_ip`                  | `127.0.0.1`      | Graph 服务的本地 IP（或主机名）。本地 IP 用于识别 nebula-graphd 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
 |`listen_netdev`             |`any`             |监听的网络设备。                                     |不支持|
 | `port`                     | `9669`           | Graph 服务的 RPC 守护进程监听端口。 |不支持|
 |`reuse_port`                |`false`           | 是否启用 SO_REUSEPORT。          |不支持|
@@ -82,7 +82,7 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
 
 !!! caution
 
-    必须在配置文件中使用真实的 IP 地址。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
+    使用 IP 时建议使用真实的 IP。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
     
 ## charset and collate 配置
 
