--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -57,8 +57,8 @@ Storage 服务提供了两份初始配置文件`nebula-storaged.conf.default`和
 
 | 名称                      | 预设值           | 说明          |是否支持运行时动态修改|
 | :----------------------- | :---------------- | :------------------------|:----------------------- |
-| `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP 地址和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
-|`local_ip`               | `127.0.0.1`      | Storage 服务的本地 IP 地址。本地 IP 地址用于识别 nebula-storaged 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
+| `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP（或主机名）和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
+|`local_ip`               | `127.0.0.1`      | Storage 服务的本地 IP（或主机名）。本地 IP 地址用于识别 nebula-storaged 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
 | `port`                  | `9779`           | Storage 服务的 RPC 守护进程监听端口。同时还会使用相邻的`-1`（`9778`）和`+1`（`9780`）端口。<br/>`9778`：Admin 服务（Storage 接收 Meta 命令的服务）占用的端口。<br/>`9780`：Storage 服务之间的 Raft 通信端口。|不支持|
 | `ws_ip`                   | `0.0.0.0`      | HTTP 服务的 IP 地址。                                   |不支持|
 | `ws_http_port`            | `19779`        | HTTP 服务的端口。                                     |不支持|
@@ -66,7 +66,7 @@ Storage 服务提供了两份初始配置文件`nebula-storaged.conf.default`和
 
 !!! caution
 
-    必须在配置文件中使用真实的 IP 地址。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
+    使用 IP 时建议使用真实的 IP。否则某些情况下`127.0.0.1/0.0.0.0`无法正确解析。
 
 ## raft 配置
 
