--- a/docs-2.0-zh/6.monitor-and-metrics/1.query-performance-metrics.md
+++ b/docs-2.0-zh/6.monitor-and-metrics/1.query-performance-metrics.md
@@ -17,12 +17,12 @@
 ### 语法
 
 ```bash
-curl -G "http://<ip>:<port>/stats?stats=<metric_name_list> [&format=json]"
+curl -G "http://<host>:<port>/stats?stats=<metric_name_list> [&format=json]"
 ```
 
 |选项|说明|
 |:---|:---|
-|`ip`|服务器的 IP 地址，可以在安装目录内查看配置文件获取。|
+|`host`|服务器的 IP 或主机名，可以在安装目录内查看配置文件获取。|
 |`port`|服务器的 HTTP 端口，可以在安装目录内查看配置文件获取。默认情况下，Meta 服务端口为 19559，Graph 服务端口为 19669，Storage 服务端口为 19779。|
 |`metric_name_list`|监控指标名称，多个监控指标用英文逗号（,）隔开。|
 |`&format=json`|将结果以 JSON 格式返回。|
