--- a/docs-2.0-zh/backup-and-restore/3.manage-snapshot.md
+++ b/docs-2.0-zh/backup-and-restore/3.manage-snapshot.md
@@ -48,7 +48,7 @@ nebula> SHOW SNAPSHOTS;
 |:---|:---|
 |`Name`|快照名称，前缀为`SNAPSHOT`，表示该文件为快照文件，后缀为快照创建的时间点（UTC 时间）。|
 |`Status`|快照状态。`VALID`表示快照有效，`INVALID`表示快照无效。|
-|`Hosts`|创建快照时所有 Storage 服务器的 IP 地址和端口。|
+|`Hosts`|创建快照时所有 Storage 服务器的 IP（或主机名）和端口。|
 
 ### 快照路径
 
