--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
@@ -23,5 +23,5 @@ nebula> SHOW META LEADER;
 
 | Parameter                   | Description                                                                                                                           |
 | :---                        | :---                                                                                                                                  |
-| `Meta Leader`               | Shows the information of the leader in the Meta cluster, including the IP address and port of the server where the leader is located. |
+| `Meta Leader`               | Shows the information of the leader in the Meta cluster, including the IP (or hostname) and port of the server where the leader is located. |
 | `secs from last heart beat` | Indicates the time interval since the last heartbeat. This parameter is measured in seconds.                                          |
