--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -57,8 +57,8 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                       | Predefined value | Description          |Whether supports runtime dynamic modifications|
 | :----------------------- | :---------------- | :---------------------------------------------------- |:------------------|
-| `meta_server_addrs`        | `127.0.0.1:9559` | Specifies the IP addresses and ports of all Meta Services.  Multiple addresses are separated with commas. |  No|
-|`local_ip`                  | `127.0.0.1`      | Specifies the local IP for the Storage Service. The local IP address is used to identify the nebula-storaged process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
+| `meta_server_addrs`        | `127.0.0.1:9559` | Specifies the IPs (or hostnames) and ports of all Meta Services.  Multiple addresses are separated with commas. |  No|
+|`local_ip`                  | `127.0.0.1`      | Specifies the local IP (or hostname) for the Storage Service. The local IP address is used to identify the nebula-storaged process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
 | `port`                     | `9779`           | Specifies RPC daemon listening port of the Storage service. The neighboring ports `-1` (`9778`) and `+1` (`9780`) are also used. <br/>`9778`: The port used by the Admin service, which receives Meta commands for Storage. <br/>`9780`: The port used for Raft communication between Storage services.|  No|
 | `ws_ip`                    | `0.0.0.0`        | Specifies the IP address for the HTTP service. |  No|
 | `ws_http_port`             | `19779`          | Specifies the port for the HTTP service. |  No|
@@ -66,7 +66,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 !!! caution
 
-    The real IP address must be used in the configuration file. Otherwise, `127.0.0.1/0.0.0.0` cannot be parsed correctly in some cases.
+    It is recommended to use a real IP when using IP address. Otherwise, `127.0.0.1/0.0.0.0` cannot be parsed correctly in some cases.
 
 ## Raft configurations
 
