--- a/docs-2.0-en/backup-and-restore/3.manage-snapshot.md
+++ b/docs-2.0-en/backup-and-restore/3.manage-snapshot.md
@@ -48,7 +48,7 @@ The parameters in the return information are described as follows.
 |-----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | `Name`    | The name of the snapshot directory. The prefix `SNAPSHOT` indicates that the file is a snapshot file, and the suffix indicates the time the snapshot was created (UTC). |
 | `Status`  | The status of the snapshot. `VALID` indicates that the creation succeeded, while `INVALID` indicates that it failed.                                                    |
-| `Hosts`   | IP addresses and ports of all Storage servers at the time the snapshot was created.                                                                                     |
+| `Hosts`   | The IPs (or hostnames) and ports of all Storage servers at the time the snapshot was created.                                                                                     |
 
 ### Snapshot path
 
