--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
@@ -23,5 +23,5 @@ nebula> SHOW META LEADER;
 
 |参数|说明|
 |:---|:---|
-|`Meta Leader`|Meta 集群的 leader 信息，包括 leader 所在服务器的 IP 地址和端口。|
+|`Meta Leader`|Meta 集群的 leader 信息，包括 leader 所在服务器的 IP（或主机名）和端口。|
 |`secs from last heart beat`|距离上次心跳的时间间隔。单位：秒。|
