support-restart-of-service-pods
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -60,7 +60,7 @@ Part of the above parameters are described as follows:
 | :------------------------------------- | :------------------------------ | :----------------------------------------- |
 | `image.nebulaOperator.image`           | `vesoft/nebula-operator:{{operator.tag}}` | The image of NebulaGraph Operator, version of which is {{operator.release}}. |
 | `image.nebulaOperator.imagePullPolicy` | `IfNotPresent`                  | The image pull policy in Kubernetes.                            |
-| `imagePullSecrets`                     | -                               | The image pull secret in Kubernetes.                            |
+| `imagePullSecrets`                     | -                               | The image pull secret in Kubernetes. For example `imagePullSecrets[0].name="vesoft"`.|                     
 | `kubernetesClusterDomain`              | `cluster.local`                 | The cluster domain.                                |
 | `controllerManager.create`             | `true`                          | Whether to enable the controller-manager component.              |
 | `controllerManager.replicas`           | `2`                             | The number of controller-manager replicas.                |
@@ -76,6 +76,20 @@ The following example shows how to enable AdmissionWebhook when you install Nebu
 
 ```bash
 helm install nebula-operator nebula-operator/nebula-operator --namespace=<nebula-operator-system> --set admissionWebhook.create=true
+```
+
+Check whether the specified configuration of NebulaGraph Operator is installed successfully:
+
+```bash
+helm get values nebula-operator -n <nebula-operator-system>
+```
+
+Example output:
+
+```yaml
+USER-SUPPLIED VALUES:
+admissionWebhook:
+  create: true
 ```
 
 For more information about `helm install`, see [Helm Install](https://helm.sh/docs/helm/helm_install/).
