--- a/docs-2.0-en/k8s-operator/3.operator-management/3.2.update-operator.md
+++ b/docs-2.0-en/k8s-operator/3.operator-management/3.2.update-operator.md
@@ -26,4 +26,18 @@ This topic introduces how to update the configuration of NebulaGraph Operator.
   helm upgrade nebula-operator nebula-operator/nebula-operator --namespace=nebula-operator-system --version={{operator.release}} --set admissionWebhook.create=true
   ```
 
-  For more information, see [Helm upgrade](https://helm.sh/docs/helm/helm_update/).
+  For more information, see [Helm upgrade](https://helm.sh/docs/helm/helm_upgrade/).
+
+4. Check whether the configuration of NebulaGraph Operator is updated successfully.
+
+  ```bash
+  helm get values nebula-operator -n nebula-operator-system
+  ```
+
+  Example output:
+
+  ```yaml
+  USER-SUPPLIED VALUES:
+  admissionWebhook:
+    create: true
+  ```
