--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -255,7 +255,9 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
       --version={{operator.release}} \
       # Specify the namespace for the NebulaGraph cluster.
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-      # Customize the chart release name.
+      # Configure the Secret for pulling images from the private repository.
+      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
+      # Customize the cluster name.
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # Specify the version for the NebulaGraph cluster.
