--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
@@ -12,6 +12,7 @@ Operator triggers a rolling update of the NebulaGraph cluster under the followin
 
 - The version of the NebulaGraph cluster changes.
 - The configuration of the NebulaGraph cluster changes.
+- NebulaGraph cluster services are restarted.
 
 ## Specify a rolling update strategy
 
