--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -62,7 +62,7 @@ scheduler:
 | :------------------------------------- | :------------------------------ | :----------------------------------------- |
 | `image.nebulaOperator.image`           | `vesoft/nebula-operator:{{operator.tag}}` | NebulaGraph Operator 的镜像，版本为{{operator.release}}。 |
 | `image.nebulaOperator.imagePullPolicy` | `IfNotPresent`                  | 镜像拉取策略。                            |
-| `imagePullSecrets`                     | `[]`                               | 镜像拉取密钥。                            |
+| `imagePullSecrets`                     | `[]`                               | 镜像拉取密钥，例如`imagePullSecrets[0].name="vesoft"`。|                     
 | `kubernetesClusterDomain`              | `cluster.local`           | 集群域名。                                |
 | `controllerManager.create`             | `true`                          | 是否启用 controller-manager。              |
 | `controllerManager.replicas`           | `2`                             | controller-manager 副本数。                 |
@@ -78,3 +78,19 @@ scheduler:
 ```bash
 helm install nebula-operator nebula-operator/nebula-operator --namespace=<nebula-operator-system> --set admissionWebhook.create=true
 ```
+
+验证是否开启 AdmissionWebhook：
+
+```bash
+helm get values nebula-operator -n <nebula-operator-system>
+```
+
+示例输出：
+
+```yaml
+USER-SUPPLIED VALUES:
+admissionWebhook:
+  create: true
+```
+
+关于`helm install`命令更多信息, 参见 [Helm Install](https://helm.sh/docs/helm/helm_install/)。
