--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.2.update-operator.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.2.update-operator.md
@@ -26,4 +26,20 @@
   helm upgrade nebula-operator nebula-operator/nebula-operator --namespace=nebula-operator-system --version={{operator.release}} --set admissionWebhook.create=true
   ```
 
-  更多信息，参考 [Helm 升级](https://helm.sh/docs/helm/helm_update/)。
+  更多信息，参考 [Helm 升级](https://helm.sh/docs/helm/helm_upgrade/)。
+
+4. 查看 NebulaGraph Operator 的配置是否更新成功。
+
+  ```bash
+  helm get values nebula-operator -n nebula-operator-system
+  ```
+
+  示例输出：
+
+  ```yaml
+  USER-SUPPLIED VALUES:
+  admissionWebhook:
+    create: true
+  ```
+
+
