--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -55,7 +55,7 @@
 
   输出：
 
-  ```bash
+  ```yaml
   Release "nebula-operator" has been upgraded. Happy Helming!
   NAME: nebula-operator
   LAST DEPLOYED: Tue Nov 16 02:21:08 2021
