--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
@@ -12,6 +12,7 @@ Operator 会在以下情况下触发 {{nebula.name}} 集群的滚动更新：
 
 - {{nebula.name}} 集群的版本发生变化。
 - {{nebula.name}} 集群的配置发生变化。
+- {{nebula.name}} 集群的服务执行重启操作。
 
 ## 配置滚动更新策略
 
