--- a/docs-2.0-en/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0-en/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -53,7 +53,7 @@
 
   Output:
 
-  ```bash
+  ```yaml
   Release "nebula-operator" has been upgraded. Happy Helming!
   NAME: nebula-operator
   LAST DEPLOYED: Tue Apr 16 02:21:08 2022
