--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -260,13 +260,14 @@
       --version={{operator.release}} \
       # 指定 {{nebula.name}} 集群所处的命名空间。
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-      # 自定义 chart 发布名称。
+      # 配置拉取私有仓库中镜像的 Secret。
+      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
+      # 自定义集群名称。
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # 指定 {{nebula.name}} 集群的版本。
       --set nebula.version=v{{nebula.release}} 
-  ``` 
-
+  ```
 
 7. 查看 {{nebula.name}} 集群 Pod 的启动状态。
    
