--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -28,7 +28,20 @@
   helm repo update
   ``` 
 
-3. 升级 NebulaGraph Operator 至 {{operator.release}} 版本。
+3. 查看最新的 NebulaGraph Operator 版本。
+
+  ```bash
+  helm search repo nebula-operator/nebula-operator
+  ```
+
+  返回示例：
+
+  ```bash
+  NAME                           	CHART VERSION	APP VERSION	DESCRIPTION
+  nebula-operator/nebula-operator	{{operator.release}}        	{{operator.release}}      	Nebula Operator Helm chart for Kubernetes
+  ```
+
+4. 升级 NebulaGraph Operator 至 {{operator.release}} 版本。
 
   ```bash
   helm upgrade nebula-operator nebula-operator/nebula-operator --namespace=<namespace_name> --version={{operator.release}}
@@ -54,7 +67,7 @@
   NebulaGraph Operator installed!
   ```
 
-4. 拉取最新的 CRD 配置文件。
+5. 拉取最新的 CRD 配置文件。
 
 
   !!! note
@@ -80,7 +93,7 @@
     - `-C /tmp`: 如不指定，则默认解压至当前路径。
     
 
-5. 在`nebula-operator`目录下升级 CRD 配置文件。
+6. 在`nebula-operator`目录下升级 CRD 配置文件。
    
   ```bash
   kubectl apply -f crds/nebulaclusters.yaml
