--- a/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -26,7 +26,20 @@
   helm repo update
   ``` 
 
-3. Upgrade NebulaGraph Operator to version {{operator.release}}.
+3. View the latest version of NebulaGraph Operator.
+
+  ```bash
+  helm search repo nebula-operator/nebula-operator
+  ```
+
+  Example output:
+
+  ```bash
+  NAME                           	CHART VERSION	APP VERSION	DESCRIPTION
+  nebula-operator/nebula-operator	{{operator.release}}        	{{operator.release}}      	Nebula Operator Helm chart for Kubernetes
+  ```
+
+4. Upgrade NebulaGraph Operator to {{operator.release}}.
 
   ```bash
   helm upgrade nebula-operator nebula-operator/nebula-operator --namespace=<namespace_name> --version={{operator.release}}
@@ -52,7 +65,7 @@
   NebulaGraph Operator installed!
   ```
 
-4. Pull the latest CRD configuration file.
+5. Pull the latest CRD configuration file.
 
   !!! note
         You need to upgrade the corresponding CRD configurations after NebulaGraph Operator is upgraded. Otherwise, the creation of NebulaGraph clusters will fail. For information about the CRD configurations, see [apps.nebula-graph.io_nebulaclusters.yaml](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.tag}}/config/crd/bases/apps.nebula-graph.io_nebulaclusters.yaml).
@@ -76,7 +89,7 @@
     - `-C /tmp`: If not specified, the chart files will be unpacked to the current directory.
   
 
-5. Upgrade the CRD configuration file in the `nebula-operator` directory.
+6. Upgrade the CRD configuration file in the `nebula-operator` directory.
 
   ```bash
   kubectl apply -f crds/nebulaclusters.yaml
