--- a/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -89,7 +89,7 @@
     - `-C /tmp`: If not specified, the chart files will be unpacked to the current directory.
   
 
-6. Upgrade the CRD configuration file in the `nebula-operator` directory.
+6. Apply the latest CRD configuration file in the `nebula-operator` directory.
 
   ```bash
   kubectl apply -f crds/nebulaclusters.yaml
