--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -93,7 +93,7 @@
     - `-C /tmp`: 如不指定，则默认解压至当前路径。
     
 
-6. 在`nebula-operator`目录下升级 CRD 配置文件。
+6. 在`nebula-operator`目录下应用最新的 CRD 配置文件。
    
   ```bash
   kubectl apply -f crds/nebulaclusters.yaml
