add annotation to some examples of `MATCH` clause
as titled

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -44,6 +44,7 @@ MATCH <pattern> [<clause_1>]  RETURN <output>  [<clause_2>];
 用户可以在一对括号中使用自定义变量来表示模式中的点。例如`(v)`。
 
 ```ngql
+# 读取全图空间中任意 3 个点数据
 nebula> MATCH (v) \
         RETURN v \
         LIMIT 3;
