Turn off autoplay
https://github.com/vesoft-inc/nebula-docs-cn/issues/3072

--- a/docs-2.0-zh/1.introduction/1.what-is-nebula-graph.md
+++ b/docs-2.0-zh/1.introduction/1.what-is-nebula-graph.md
@@ -88,7 +88,7 @@
 
 - [{{nebula.name}} 介绍视频](https://www.bilibili.com/video/BV1kf4y1v7LM)（01 分 39 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=287936425&bvid=BV1kf4y1v7LM&cid=259888281&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=287936425&bvid=BV1kf4y1v7LM&cid=259888281&autoplay=0&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
 
 ## 主题演讲
 
