--- a/docs-2.0-zh/1.introduction/3.nebula-graph-architecture/4.storage-service.md
+++ b/docs-2.0-zh/1.introduction/3.nebula-graph-architecture/4.storage-service.md
@@ -279,5 +279,5 @@ Storage 服务基于 Raft 协议实现的分布式架构，与 HDFS 的分布式
 
 - [nMeetup·上海 ｜ Storage in {{nebula.name}} 2.0](https://www.bilibili.com/video/BV16b4y1Q77k)（24 分 29 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=629800372&bvid=BV16b4y1Q77k&cid=317031300&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=629800372&bvid=BV16b4y1Q77k&cid=317031300&autoplay=0&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
 -->
