--- a/docs-2.0-zh/2.quick-start/1.quick-start-overview.md
+++ b/docs-2.0-zh/2.quick-start/1.quick-start-overview.md
@@ -24,7 +24,7 @@
 
     视频介绍
 
-    <iframe src="//player.bilibili.com/player.html?bvid=BV1NA411y7Uy&cid=1028726635&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+    <iframe src="//player.bilibili.com/player.html?bvid=BV1NA411y7Uy&cid=1028726635&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
     
 
 === "使用 Docker Compose"
