--- a/docs-2.0-zh/3.ngql-guide/12.vertex-statements/4.delete-vertex.md
+++ b/docs-2.0-zh/3.ngql-guide/12.vertex-statements/4.delete-vertex.md
@@ -51,4 +51,4 @@ nebula> GO FROM "player100" OVER serve WHERE properties(edge).start_year == "202
 ## 悬挂边视频
 
 * [{{nebula.name}} 的悬挂边小科普](https://www.bilibili.com/video/BV1GR4y1F7ko)（2 分 28 秒）
-<iframe src="//player.bilibili.com/player.html?aid=339743290&bvid=BV1GR4y1F7ko&cid=545565805&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=339743290&bvid=BV1GR4y1F7ko&cid=545565805&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
