--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -285,5 +285,5 @@ graphd:
 
 [使用 docker compose 部署 {{nebula.name}} 2.0 和 Web Studio](https://www.bilibili.com/video/BV1T54y1b7pa)（18 分 10 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=844979052&bvid=BV1T54y1b7pa&cid=319036307&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=844979052&bvid=BV1T54y1b7pa&cid=319036307&autoplay=0&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
 -->
