--- a/docs-2.0-zh/backup-and-restore/nebula-br/1.what-is-br.md
+++ b/docs-2.0-zh/backup-and-restore/nebula-br/1.what-is-br.md
@@ -128,4 +128,4 @@ Backup&Restore（简称 BR）是一款命令行界面（CLI）工具，可以帮
 
 - [{{nebula.name}} 容灾备份工具 nebula-br 介绍](https://www.bilibili.com/video/av851858570)（3 分 34 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=851858570&bvid=BV11L4y1g7rD&cid=515246370&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=851858570&bvid=BV11L4y1g7rD&cid=515246370&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
