--- a/docs-2.0-zh/1.introduction/2.1.path.md
+++ b/docs-2.0-zh/1.introduction/2.1.path.md
@@ -52,4 +52,4 @@
 
 [Path](https://www.bilibili.com/video/BV1Uf4y1t72L)（03 分 09 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=291311326&bvid=BV1Uf4y1t72L&cid=361000311&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=291311326&bvid=BV1Uf4y1t72L&cid=361000311&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
