--- a/docs-2.0-zh/8.service-tuning/2.graph-modeling.md
+++ b/docs-2.0-zh/8.service-tuning/2.graph-modeling.md
@@ -77,7 +77,7 @@ nebula> MATCH (v1:player)-[e:temp]->() return collect(e.tmp);
 对于自环的操作没有封装任何的语法糖，操作方式与普通的边无异。
 
 * [{{nebula.name}} 自环小科普](https://www.bilibili.com/video/BV1E5411S7t2)（2 分 54 秒）
-<iframe src="////player.bilibili.com/player.html?aid=467674856&bvid=BV1E5411S7t2&cid=563290238&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="////player.bilibili.com/player.html?aid=467674856&bvid=BV1E5411S7t2&cid=563290238&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
 
 ### 悬挂边
 
@@ -123,7 +123,7 @@ Empty set (time spent 3153/3573 us)
 ```
 
 * [{{nebula.name}} 的悬挂边小科普](https://www.bilibili.com/video/BV1GR4y1F7ko)（2 分 28 秒）
-<iframe src="//player.bilibili.com/player.html?aid=339743290&bvid=BV1GR4y1F7ko&cid=545565805&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=339743290&bvid=BV1GR4y1F7ko&cid=545565805&autoplay=0&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
 
 ### 广度优先大于深度优先
 
