--- a/docs-2.0-en/2.quick-start/1.quick-start-workflow.md
+++ b/docs-2.0-en/2.quick-start/1.quick-start-workflow.md
@@ -30,7 +30,7 @@ You can quickly get started with NebulaGraph by deploying NebulaGraph with Docke
 
     For more information about how to use NebulaGraph with Docker Desktop, see the following video:
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8zKer-4RXEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8zKer-4RXEg" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 === "Using Docker Compose"
