Turn off autoplay (#2375)
* Turn off autoplay

https://github.com/vesoft-inc/nebula-docs-cn/issues/3072

* Update 1.quick-start-workflow.md

* Update docs-2.0-zh/1.introduction/3.nebula-graph-architecture/3.graph-service.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

---------

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-zh/1.introduction/3.nebula-graph-architecture/3.graph-service.md
+++ b/docs-2.0-zh/1.introduction/3.nebula-graph-architecture/3.graph-service.md
@@ -119,4 +119,4 @@ Executor 模块包含调度器（Scheduler）和执行器（Executor），通过
 
 - [nMeetup·上海 ｜全面解析 Query Engine](https://www.bilibili.com/video/BV1xV411n7DD)（33 分 30 秒）
 
-<iframe src="//player.bilibili.com/player.html?aid=417369444&bvid=BV1xV411n7DD&cid=317029694&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=417369444&bvid=BV1xV411n7DD&cid=317029694&autoplay=0&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="720px" height="480px"> </iframe>
