--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -228,7 +228,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
   export STORAGE_CLASS_NAME=local-sc       # StorageClass for the NebulaGraph cluster.
   ```
 
-4. Create a namespace for the NebulaGraph cluster if it hasn't been created already.
+4. Create a namespace for the NebulaGraph cluster if it is not created.
 
   ```bash
   kubectl create namespace "${NEBULA_CLUSTER_NAMESPACE}"
@@ -255,8 +255,6 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
       --version={{operator.release}} \
       # Specify the namespace for the NebulaGraph cluster.
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-      # Configure the Secret for pulling images from the private repository.
-      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
       # Customize the cluster name.
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
