add statements of fetch all edges by a starting vertex&minor changes
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -11,7 +11,7 @@ NebulaGraph stores data in the form of vertices and edges. Each vertex can have 
 The primary query statements in NebulaGraph fall into the following categories:
 <!-- no toc -->
 - [FETCH PROP ON](#fetch_prop_on)
-- [LOOKUP ON](#lookup_on_id)
+- [LOOKUP ON](#lookup_on)
 - [GO](#go)
 - [MATCH](#match)
 - [FIND PATH](#find_path)
