--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -11,7 +11,7 @@
 {{nebula.name}} 的核心查询语句可分为：
 <!-- no toc -->
 - [FETCH PROP ON](#fetch_prop_on)
-- [LOOKUP ON](#lookup_on_id)
+- [LOOKUP ON](#lookup_on)
 - [GO](#go)
 - [MATCH](#match)
 - [FIND PATH](#find_path)
@@ -48,7 +48,7 @@ FETCH PROP ON player "player100" YIELD properties(vertex);
                 └─────────────────────────── 获取 player 这个 TAG 下的属性
 ```
 
-更多信息，请参见[FETCH PROP ON](4.fetch.md)。
+更多信息，请参见 [FETCH PROP ON](4.fetch.md)。
 
 ### LOOKUP ON
 
@@ -76,7 +76,7 @@ LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
             └─────────────────────────────────── 根据点的 TAG player 查询
 ```
 
-更多信息，请参见[LOOKUP ON](5.lookup.md)。
+更多信息，请参见 [LOOKUP ON](5.lookup.md)。
 
 ### GO
 
@@ -106,7 +106,7 @@ GO 3 STEPS FROM "player102" OVER follow YIELD dst(edge);
       └────────────────────────────────── 探索 3 步
 ```
 
-更多信息，请参见[GO](3.go.md)。
+更多信息，请参见 [GO](3.go.md)。
 
 ### MATCH
 
@@ -133,7 +133,7 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
         RETURN v2.player.name AS Name;
 ```
 
-更多信息，请参见[MATCH](2.match.md)。
+更多信息，请参见 [MATCH](2.match.md)。
 
 ### FIND PATH 
 
@@ -160,7 +160,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
        └─────────────────────────── 查找最短路径
 ```
 
-更多信息，请参见[FIND PATH](6.find-path.md)。
+更多信息，请参见 [FIND PATH](6.find-path.md)。
 
 ### GET SUBGRAPH
 
@@ -183,7 +183,7 @@ GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relation
                                                
 ```
 
-更多信息，请参见[GET SUBGRAPH](7.get-subgraph.md)。
+更多信息，请参见 [GET SUBGRAPH](7.get-subgraph.md)。
 
 ### SHOW
 
